syntax = "proto3";

option go_package = "./pb";

message LoginReq {
  string account = 1;
  string password = 2;
}

message LoginResp {
  string result = 1;
  int32 status = 2;
}